# cartile

./: .gitignore  CLAUDE.md  README.md
PLANS/: 2026-03-22_14-30_format-core-library.md  2026-03-22_16-00_cli-tiled-converter.md
crates/cartile-cli/: Cargo.toml
crates/cartile-cli/src/: lib.rs  main.rs
crates/cartile-cli/src/commands/: convert.rs  export.rs  mod.rs  schema.rs  validate.rs
crates/cartile-cli/src/ldtk/: convert.rs  types.rs
crates/cartile-cli/src/tiled/: convert.rs  export.rs  mod.rs  types.rs
crates/cartile-cli/tests/: convert_helpers_test.rs  convert_test.rs  export_test.rs  ldtk_test.rs  tiled_types_test.rs
crates/cartile-cli/tests/fixtures/: external_tileset.json  hexagonal.json  ldtk_intgrid.json  ldtk_simple.json  orthogonal.json  terrain.tsj  with_objects.json
crates/cartile-format/: Cargo.toml
crates/cartile-format/src/: autotile.rs  error.rs  lib.rs  tile_id.rs  validate.rs
crates/cartile-format/src/types/: grid.rs  layer.rs  map.rs  mod.rs  object.rs  property.rs  tileset.rs
crates/cartile-format/tests/: autotile_test.rs  grid_test.rs  layer_test.rs  roundtrip_test.rs  tile_id_test.rs  tileset_test.rs  validation_test.rs
crates/cartile-format/tests/fixtures/: external_ref.cartile  hex_map.cartile  minimal_map.cartile  srpg_map.cartile  terrain.cartile-ts  vertex_height.cartile
crates/cartile-wasm/: Cargo.toml
crates/cartile-wasm/src/: lib.rs
crates/cartile-wasm/tests/: wasm_test.rs
docs/: usage-guide.md
docs/research/: tilemap-tools-landscape.md
docs/specs/: autotile-runtime-design.md  cli-tiled-converter-design.md  feasibility-analysis.md  format-spec-v0.1-design.md  (+1 more)
schemas/: cartile-map.schema.json
web/: app.js  index.html  style.css
