[package]
name = "cartile-cli"
version = "0.1.0"
edition = "2024"
description = "cartile CLI — tilemap format converter and validator"
license = "MIT"

[[bin]]
name = "cartile"
path = "src/main.rs"

[dependencies]
cartile-format = { path = "../cartile-format" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pretty_assertions = "1"
