[package]
name = "cartile-format"
version = "0.1.0"
edition = "2024"
description = "Cartile tilemap format — read, write, and validate .cartile files"
license = "MIT"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
pretty_assertions = "1"
