[package]
name = "cartile-wasm"
version = "0.1.0"
edition = "2024"
description = "cartile WASM bindings for JavaScript/TypeScript"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cartile-format = { path = "../cartile-format" }
cartile-cli = { path = "../cartile-cli" }
wasm-bindgen = "0.2"
serde_json = "1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
